--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,26 +1,151 @@
 <main>
-    <h1 class="text-center text-uppercase">Hello world</h1>
-    <h2 class="text-end text-lowercase">Second</h2>
-    <h3 class="text-capiyalize">3 title one two</h3>
+    <div class="row gy-5">
+        <section class="col-12">
+            <div class="card text-bg-dark">
+                <img class="card-img-top" src="https://picsum.photos/400/200" alt="product photo">
+                <div class="card-body">
+                    <h5 class="card-title text-bg-primary">Product</h5>
+                    <p class="tex bg-secondary">USB jfnvorigjeporgkp<br>eodkajdnhbchef</p>
+                    <a href="#" class="btn btn-primary">Open</a>
+                </div>
+            </div>
+        </section>
 
-    <hr>
+        <section class="col-3">
+            <div class="card ">
+                <div class="card-header">
+                    <div class="display-6">Menu</div>
+                </div>
 
-    <div class="display-1 text-muted">Hello world</div>
-    <div class="display-5">Second</div>
-    <div class="'display-6">3 title</div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item  ">
+                        <a href="#" class="btn btn-link">Home page</a>
+                    </li>
+                    <li class="list-group-item ">
+                        <a href="#" class="btn btn-link ">Summary page</a>
+                    </li>
+                    </li>
+                    <li class="list-group-item ">
+                        <a href="#" class="btn btn-link">Skills page</a>
+                    </li>
+                </ul>
 
-    <hr>
+                <div class="card-footer">
+                    <bitton class="btn btn-dark btn-sm">Update list</bitton>
+                </div>
 
-    <div class="text-muted text-end">
-        Додатковий <span class="display-6">текст</span>
+            </div>
+        </section>
+        <section class="col-9">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>
+                            #id
+                        </th>
+                        <th>
+                            name
+                        </th>
+                        <th>
+                            age
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>1</td>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>2</td>
+                        <td>Alex</td>
+                        <td>29</td>
+                    </tr>
+                    <tr>
+                        <th>3</td>
+                        <td>Bred</td>
+                        <td>37</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section class="col-12">
+            <div class="row g-2">
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content is out box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content is out box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content is out box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content is out box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+
+        </section>
     </div>
 
-    <hr>
-    <div class="card">
-        <div class="card-body">
-            <a href="#" class="btn btn-primary">
-                Button primary
-            </a>
+
+    {{!-- <br>
+    <br>
+    <br>
+
+    <div class="card text-bg-primary">
+        <div class="card-header">
+            <div class="display-6">Menu</div>
+        </div>
+
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item text-bg-dark ">
+                <a href="#" class="btn btn-link">Home page</a>
+            </li>
+            <li class="list-group-item text-bg-warning">
+                <a href="#" class="btn btn-link ">Summary page</a>
+            </li>
+            </li>
+            <li class="list-group-item text-bg-danger">
+                <a href="#" class="btn btn-link">Skills page</a>
+            </li>
+        </ul>
+
+        <div class="card-footer">
+            <bitton class="btn btn-dark btn-sm">Update list</bitton>
         </div>
 
     </div>
@@ -28,37 +153,99 @@
     <br>
     <br>
     <br>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>
+                    #id
+                </th>
+                <th>
+                    name
+                </th>
+                <th>
+                    age
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>1</td>
+                <td>Jhon</td>
+                <td>35</td>
+            </tr>
+            <tr>
+                <th>2</td>
+                <td>Alex</td>
+                <td>29</td>
+            </tr>
+            <tr>
+                <th>3</td>
+                <td>Bred</td>
+                <td>37</td>
+            </tr>
+        </tbody>
+    </table>
 
-    <div class="card">
-        <div class="card-body">
-            <div class="">My text</div>
-            <div class="text-success">My text</div>
-            <div class="text-muted">My text</div>
-            <div class="text-danger">My text</div>
+    <br>
+    <br>
+    <br>
+
+    <div class="row gx-5 gy-1">
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content is out box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content is out box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content is out box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content is out box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-bg-success">
+                <div class="card-header text-center">Header</div>
+                <div class="card-body text-center">
+                    <h6 class="card-title">This is title</h6>
+                    <p>This is content is out box</p>
+                    <button class="btn btn-light">Click!</button>
+                </div>
+                <div class="card-footer text-center">Footer</div>
+            </div>
         </div>
 
-    </div>
-
-    <br>
-    <br>
-    <br>
-
-    <div class="card">
-        <div class="card-body">
-            <button class="btn btn-secondary btn-lg">Додати</button>
-            <button class="btn btn-outline-secondary">Редагувати</button>
-            <button class="btn btn-danger btn-sm">Видалити</button>
-        </div>
-
-    </div>
-
-    <br>
-    <br>
-    <br>
-
-
-    <div class="card">
-        <div class="card-body">This is content</div>
-    </div>
-
+    </div> --}}
 </main>
