--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,337 +1,64 @@
 <main class="p-5">
-    <div class="row">
-        <div class="col-12 mb-5">
-             <div class="nav nav-tabs">
-            <div class="nav-item">
-                <a href="#" class="nav-link active">Main</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="nav-link disabled">Ctalog</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="nav-link">Shop list</a>
-            </div>
-            </div>
+    <div class="row g-5">
+        <div class="col-12">
+            <label class="form-label">Email adress</label>
+            <input class="form-control">
+            <div class="form-text text-danger">Error. You need to set correct email</div>
         </div>
-
-
-      <div class="col-5 pe-5">
-        <div class="card">
-        <div class=" pt-4 pb-3 px-4">
-          <div class="nav flex-column">
-            <div class="nav-item mb-2">
-                <div class="card ">
-                <a href="/summary" class="nav-link">Home page</a>
-                </div>
-                
-                </div>
-                <div class="nav-item mb-2">
-                    <div class="card">
-                <a href="#" class="nav-link disabled">Bootstrap</a>
-                </div>
-                
-                </div>
-                <div class="nav-item mb-2">
-                    <div class="card">
-                <a href="/skills" class="nav-link">FAQ page</a>
-                </div>
-                </div>
-            </div>
-          </div>
-        </div>
-     </div>
-        <div class="col-7">
+          <div class="col-12">
             <div class="row">
-                <div class="col-12">
-                    <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                    <a href="#">Home</a>
-                </li>
-                <li class="breadcrumb-item">
-                    <a href="#">PC та Ноутбук</a>
-                </li>
-                <li class="breadcrumb-item">
-                    Macbook
-                </li>
-            </ol>
+                <div class="col-2 ">
+                   <label class="form-label">Email adress</label>
                 </div>
-
-                <div class="col-12">
-                    <button class="btn btn-primary rounded-pill mb-3">Click me</button></div>
-                    <div class="alert alert-dark"> 
-                    <h6 class="mb-2">
-                        Hello world!<span class="badge text-bg-warning rounded-pill text-uppercase">Топ Продаж</span>
-                    </h6>
-                    <p class="m-0">This info</p>
-                   
+                <div class="col-6">
+                    <input class="form-control form-control-sm">
+                </div>
+                <div class="col-4 ps-5">
+                   <div class="form-text text-danger">Error. You need to set correct email</div>
                 </div>
             </div>
         </div>
+        <div>
+            <hr>
+        </div>
+        <div class="col-12">
+            <label class="form-label">Select role</label>
+            <select class="form-select form-select-lg">
+                <option selected>Open list</option>
+                <option value="1">Admin</option>
+                <option value="2">User</option>
+            </select>
+            <div class="form-text text-danger">Error. You need to set correct email</div>
+        </div>
 
+        <div>
+            <hr>
+        </div>
+
+        <div class="col-12">
+            <div class="form-label">Select food</div>
+            <div class="form-check">
+                <label class="form-check-label">Apple</label>
+                <input name="food" type="radio" class="form-check-input">
+            </div>
+             <div class="form-check">
+                <label class="form-check-label">Orange</label>
+                <input name="food" type="radio" class="form-check-input">
+            </div>
+             <div class="form-check">
+                <label class="form-check-label">Banana</label>
+                <input name="food" type="radio" class="form-check-input">
+            </div>
+
+            <div>
+                <hr>
+            </div>
+        </div>
+            <div class="col-12">
+            <div class="form-check form-switch">
+                <label class="form-check-label">Get bonus</label>
+                <input name="food" type="checkbox" class="form-check-input">
+            </div>
+        </div>
     </div>
-</main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-{{!-- <main>
-    <div class="row gy-5">
-        <section class="col-12">
-            <div class="card text-bg-dark">
-                <img class="card-img-top" src="https://picsum.photos/400/200" alt="product photo">
-                <div class="card-body">
-                    <h5 class="card-title text-bg-primary">Product</h5>
-                    <p class="tex bg-secondary">USB jfnvorigjeporgkp<br>eodkajdnhbchef</p>
-                    <a href="#" class="btn btn-primary">Open</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="col-3">
-            <div class="card ">
-                <div class="card-header">
-                    <div class="display-6">Menu</div>
-                </div>
-
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item  ">
-                        <a href="#" class="btn btn-link">Home page</a>
-                    </li>
-                    <li class="list-group-item ">
-                        <a href="#" class="btn btn-link ">Summary page</a>
-                    </li>
-                    </li>
-                    <li class="list-group-item ">
-                        <a href="#" class="btn btn-link">Skills page</a>
-                    </li>
-                </ul>
-
-                <div class="card-footer">
-                    <bitton class="btn btn-dark btn-sm">Update list</bitton>
-                </div>
-
-            </div>
-        </section>
-        <section class="col-9">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>
-                            #id
-                        </th>
-                        <th>
-                            name
-                        </th>
-                        <th>
-                            age
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>1</td>
-                        <td>Jhon</td>
-                        <td>35</td>
-                    </tr>
-                    <tr>
-                        <th>2</td>
-                        <td>Alex</td>
-                        <td>29</td>
-                    </tr>
-                    <tr>
-                        <th>3</td>
-                        <td>Bred</td>
-                        <td>37</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
-        <section class="col-12">
-            <div class="row g-2">
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content is out box</p>
-                            <button class="btn btn-light">Click!</button>
-                        </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content is out box</p>
-                            <button class="btn btn-light">Click!</button>
-                        </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content is out box</p>
-                            <button class="btn btn-light">Click!</button>
-                        </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content is out box</p>
-                            <button class="btn btn-light">Click!</button>
-                        </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-
-        </section>
-    </div> --}}
-
-
-    {{!-- <br>
-    <br>
-    <br>
-
-    <div class="card text-bg-primary">
-        <div class="card-header">
-            <div class="display-6">Menu</div>
-        </div>
-
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item text-bg-dark ">
-                <a href="#" class="btn btn-link">Home page</a>
-            </li>
-            <li class="list-group-item text-bg-warning">
-                <a href="#" class="btn btn-link ">Summary page</a>
-            </li>
-            </li>
-            <li class="list-group-item text-bg-danger">
-                <a href="#" class="btn btn-link">Skills page</a>
-            </li>
-        </ul>
-
-        <div class="card-footer">
-            <bitton class="btn btn-dark btn-sm">Update list</bitton>
-        </div>
-
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>
-                    #id
-                </th>
-                <th>
-                    name
-                </th>
-                <th>
-                    age
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th>1</td>
-                <td>Jhon</td>
-                <td>35</td>
-            </tr>
-            <tr>
-                <th>2</td>
-                <td>Alex</td>
-                <td>29</td>
-            </tr>
-            <tr>
-                <th>3</td>
-                <td>Bred</td>
-                <td>37</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <br>
-    <br>
-    <br>
-
-    <div class="row gx-5 gy-1">
-        <div class="col-4">
-            <div class="card text-bg-success">
-                <div class="card-header text-center">Header</div>
-                <div class="card-body text-center">
-                    <h6 class="card-title">This is title</h6>
-                    <p>This is content is out box</p>
-                    <button class="btn btn-light">Click!</button>
-                </div>
-                <div class="card-footer text-center">Footer</div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-bg-success">
-                <div class="card-header text-center">Header</div>
-                <div class="card-body text-center">
-                    <h6 class="card-title">This is title</h6>
-                    <p>This is content is out box</p>
-                    <button class="btn btn-light">Click!</button>
-                </div>
-                <div class="card-footer text-center">Footer</div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-bg-success">
-                <div class="card-header text-center">Header</div>
-                <div class="card-body text-center">
-                    <h6 class="card-title">This is title</h6>
-                    <p>This is content is out box</p>
-                    <button class="btn btn-light">Click!</button>
-                </div>
-                <div class="card-footer text-center">Footer</div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-bg-success">
-                <div class="card-header text-center">Header</div>
-                <div class="card-body text-center">
-                    <h6 class="card-title">This is title</h6>
-                    <p>This is content is out box</p>
-                    <button class="btn btn-light">Click!</button>
-                </div>
-                <div class="card-footer text-center">Footer</div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-bg-success">
-                <div class="card-header text-center">Header</div>
-                <div class="card-body text-center">
-                    <h6 class="card-title">This is title</h6>
-                    <p>This is content is out box</p>
-                    <button class="btn btn-light">Click!</button>
-                </div>
-                <div class="card-footer text-center">Footer</div>
-            </div>
-        </div>
-
-    </div> --}}
 </main>
