--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,4 +1,28 @@
 <main class="p-5">
+    <h1>
+    Hello!<i class="bi bi-emoji-wink"></i>
+    </h1>
+    <button class="btn btn-primary"> <i class="bi bi-envelope-fill"></i></button>
+
+    <div>
+        <i class="fa-regular fa-star fa-beat-fade" style="color: #346ac5;"></i>
+    </div>
+
+        <div>
+            <img src="/svg/slack.svg">
+        </div>
+</main>
+
+
+
+
+
+
+
+
+
+
+{{!-- <main class="p-5">
     <div class="row">
         <div class="col-12 mb-5">
              <div class="nav nav-tabs">
@@ -69,7 +93,7 @@
         </div>
 
     </div>
-</main>
+</main> --}}
 
 
 
