--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,5 +1,5 @@
 <main class="p-5">
-    <h1>
+    {{!-- <h1>
     Hello!<i class="bi bi-emoji-wink"></i>
     </h1>
     <button class="btn btn-primary"> <i class="bi bi-envelope-fill"></i></button>
@@ -11,7 +11,7 @@
         <div>
             <img src="/svg/slack.svg">
         </div>
-</main>
+</main> --}}
 
 
 
@@ -229,10 +229,10 @@
                 </div>
 
         </section>
-    </div> --}}
+    </div> 
 
 
-    {{!-- <br>
+    <br>
     <br>
     <br>
 
@@ -357,5 +357,5 @@
             </div>
         </div>
 
-    </div> --}}
-</main>
+    </div>
+</main> --}}
