--- a/src/component/purchaseItem.hbs
+++ b/src/component/purchaseItem.hbs
@@ -21,11 +21,8 @@
                     {{#with button}}
                     {{#if isPrimary}}<a href="{{link}}" class="btn btn-prymary my-3" tafger="_blank">{{text}}</a>{{/if}}
                     {{/button}}
-
-                </div>
+                {{/with}}
                 </div>
                 {{/each}}
-
-
 
  </div>
