--- a/src/container/shopreview.hbs
+++ b/src/container/shopreview.hbs
@@ -15,24 +15,20 @@
      {{/with}}
 
      <div class="row">
-            {{#with formBlock}}
-            <div class="col-8 mb-4">
-                <div class="display-4 my-5">
+        {{#with formBlock}}
+            <div class="col-8 ">
+                <div class="">
                     <h2>{{header}}</h2>
+                    <p>{{rating.title}}: {{rating.value}}</p>
                 </div>
-                    {{#with rating}}
-                    <div class="col-2">
-                        <a>{{title}}:{{value}}</a>
-                    </div>
-                    {{/with}}
+                    
 
                     {{#with actionBlock}}
                     
                      <ul class="nav nav-tabs">
                     <li class="d-flex">
                     {{#each tabs}}
-                         <a  class="nav-link {{#if @last}} disabled {{/if}}"
-                    target="_blank">{{text}}</a>
+                          <a href="#" class="nav-link {{#if isActive}} active {{/if}}">{{text}}</a>
                     {{/each}}
                     </li>
                     </ul>
@@ -45,7 +41,7 @@
                     <div class="card">
                         <p>{{title}}</p>
                         {{#with button}}
-                        <a href="{{link}}" class="btn btn-second col-5 mb-1" target="_blank" >{{text}}</a>
+                        <a href="{{link}}" class="btn btn-secondary col-5 mb-1" target="_blank" >{{text}}</a>
                         {{/with}}
 
                     </div>
@@ -71,65 +67,87 @@
 
                     {{/with}}
 
-               </div>
+            </div>
 
-                  
-                <div class="col-4 p-4">
-                 {{#with goodsInfo}}
-                 <div class="row">
-                    <div class="card">
-                     <div >
-                    <img class="card-img-top mb-2 mt-2" src="{{photo}}">
-                    </div>
-                    <p>{{name}}</p>
-                    </div>
-                 </div>
-             <br>
-                    <div class="row">
-                    <div class="card">
-                        <p>{{price}}</p>
-                        {{#if inMarker}}<a>є в наявності </a>{{/if}}
-
-                      <div class="col-4">
-                        {{#each buttons}}
-                        {{#if isPrimary}}<a href="{{link}}" class="btn btn-primary my-3" target="_blank">{{text}}</a>{{/if}}
-                        {{#if isSecondary}}<a href="{{link}}" class="btn btn-success my-2" target="_blank">{{text}}</a>{{/if}}
-                        {{/each}}
-                      </div>
-                     </div>
-                    
-                
-                         <div class="card"> 
-                                {{#with seller}}
-                            <p>{{title}}:{{value}}</p>
-                            {{/with}}
-                        </div>
-                        
-
-
-                    </div>
-                    
-                    
-                
-                  
-                  {{/with}}
-                  </div>
-                  </div>
-                  
-                  </div>
-
-                    
-
+        <div class="col-4">
             
-            {{/with}}
+            <div class="row">
+                {{#with goodsInfo}}
+
+                <div class="card">
+                    <div class="col-12">
+                        <img class="m-2" src="{{photo}}">
+                        <p><b class="ms-2">{{name}}</b></p>
+                    </div>
+                </div>
+
+                <div class="card my-2">
+                    <div class="m-1">
+                        <p class="mb-0">
+                        <h4>{{price}}</h4>
+                        </p>
+                        {{#if inMarket}} Є в наявності {{/if}}
+                        {{#each buttons}}
+                        <div class="my-2">
+                            {{#if isPrimary}} <a href="{{link}}" class="btn btn-primary"
+                                target="_blank">{{text}}</a>{{/if}}
+                            {{#if isSecondary}} <a href="{{link}}" class="btn btn-secondary"
+                                target="_blank">{{text}}</a>{{/if}}
+                        {{/each}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                {{#with seller}}
+                <p class="my-2">{{title}}: <b>{{value}}</b></p>
+                {{/with}}
+            </div>
+            
+         {{/with}}          
+         {{/with}}
+    </div>
+    </div>
+
+   <hr class="my-5">
+   
+   <div class="card">
+        {{>reviewItem}}
+   </div>
+
+     <div class="card text-bg-success my-5">
+        {{#with service}}
+        <h2 class="card-title text-center">{{title}}</h2>
+        <div class="card-body text-center">
+            <p>{{description}}</p>
+             {{#each buttons}}
+        <a href="{{link}}" class="btn btn-primary" target="_blank">{{text}}</a>
+        {{/each}}
         </div>
+        {{/with}}
      </div>
 
+     <div class="row">
+                {{#each footer}}
+                <div class="na col-2">
+                    {{#each this}}
+                    <div>
+                        <a class="nav-link {{#if @last}}disabled{{/if}}" href="{{link}}">{{text}}</a>
+                    </div>
+                    {{/each}}
+                </div>
+                {{/each}}
+         </div>
+   
 
-     </div>
+
+    
 
 
-    <hr class="my-4">
+
+
+    
 
 
 
